[package]
name = "mauro"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tera = "1.19"
pulldown-cmark = "0.12"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["fs", "set-header"] }
wiremock = "0.6"
serde_json = "1.0"

[[bin]]
name = "mauro"
path = "src/main.rs"